// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Forest renders correctly with all props 1`] = `
.c1 {
  display: grid;
  min-height: auto;
  position: relative;
  width: 100%;
  column-gap: 16px;
  grid-template-columns: 1fr min(1440px, 100% - 32px) 1fr;
}

.c1 >* {
  grid-column: 2/auto;
}

.c5 {
  color: var(--color-paragraph);
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c8 {
  color: var(--color-paragraph);
  font-size: 1.25rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c19 {
  color: var(--color-paragraph);
  font-size: 0.875rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c55 {
  -webkit-tap-highlight-color: transparent;
  background: var(--color-badge-bg);
  border: 1px solid var(--color-highlight);
  border-radius: 9999px;
  color: var(--color-paragraph);
  cursor: default;
  user-select: none;
  display: inline-block;
  font-size: 0.75rem;
  padding: 0.25rem 0.5rem;
}

.c6 {
  color: var(--color-highlight);
  font-size: 0.75rem;
  font-weight: 600;
  letter-spacing: 0.2em;
  margin: 0 0 1.25rem;
  text-transform: uppercase;
}

.c51 {
  display: inline-block;
  position: relative;
}

.c52 {
  align-items: center;
  background: none;
  border: none;
  color: var(--color-paragraph);
  cursor: pointer;
  display: inline-flex;
  height: 44px;
  justify-content: center;
  margin: -13px -10px -13px -8px;
  opacity: 0.65;
  transition: opacity 0.2s ease;
  vertical-align: middle;
  width: 44px;
}

.c52:focus-visible {
  border-radius: 100%;
  opacity: 1;
  outline: 2px solid var(--color-highlight);
  outline-offset: -10px;
}

.c52 svg {
  display: block;
}

.c0 {
  padding-bottom: 3rem;
  padding-top: 3rem;
}

.c2 {
  align-items: center;
  border: 1px solid rgba(128, 128, 128, 0.2);
  border-radius: 999px;
  display: inline-flex;
  gap: 0.5rem;
  margin-bottom: 1.25rem;
  padding: 0.3rem 0.75rem 0.3rem 0.625rem;
  width: fit-content;
}

.c3 {
  animation: k0 2.4s ease-in-out infinite;
  background: var(--color-highlight);
  border-radius: 100%;
  flex-shrink: 0;
  height: 6px;
  width: 6px;
}

.c4 {
  color: var(--color-paragraph);
  font-size: 0.75rem;
  font-weight: 700;
  letter-spacing: 0.12em;
  text-transform: uppercase;
}

.c15 {
  scroll-margin-top: 6rem;
}

.c7 {
  color: var(--color-headline);
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 2rem;
  font-weight: 700;
  line-height: 1;
  margin: 0 0 1rem;
  max-width: 640px;
}

.c9 {
  line-height: 1.6;
  margin-bottom: 2.5rem;
  max-width: 580px;
}

.c10 {
  display: flex;
  flex-direction: column;
  gap: 0.875rem;
  margin-bottom: 2.5rem;
}

.c11 {
  align-items: flex-start;
  display: flex;
  gap: 1rem;
}

.c12 {
  color: var(--color-paragraph);
  flex-shrink: 0;
  font-size: 0.75rem;
  letter-spacing: 0.08em;
  text-transform: uppercase;
  white-space: nowrap;
  width: 110px;
}

.c13 {
  align-items: center;
  color: var(--color-highlight);
  display: flex;
  flex: 0 0 16px;
  font-size: 0.875rem;
  height: 1.2em;
  justify-content: center;
}

.c14 {
  color: var(--color-headline);
  font-size: 0.875rem;
  line-height: 1.2;
}

.c16 {
  display: grid;
  gap: 0.625rem;
  grid-template-columns: repeat(3, 1fr);
  margin-bottom: 1.5rem;
}

.c17 {
  border: 1px solid rgba(128, 128, 128, 0.15);
  border-radius: 0.75rem;
  display: flex;
  flex-direction: column;
  gap: 0.25rem;
  padding: 1rem 0.875rem;
}

.c18 {
  color: var(--color-headline);
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 2rem;
  font-weight: 700;
  line-height: 1;
}

.c20 {
  color: var(--color-paragraph);
}

.c21 {
  background: color-mix(in srgb, var(--color-highlight) 5%, transparent);
  border: 2px solid var(--color-highlight);
  border-radius: 1rem;
  display: flex;
  flex-direction: column;
  gap: 2rem;
  margin-bottom: 2.5rem;
  padding: 2rem;
}

.c22 {
  flex: 1;
}

.c26 {
  align-items: flex-start;
  border-top: 1px solid color-mix(in srgb, var(--color-highlight) 15%, transparent);
  display: flex;
  flex-direction: column;
  gap: 0.25rem;
  padding-top: 1.25rem;
}

.c27 {
  color: var(--color-paragraph);
  font-size: 0.75rem;
  font-weight: 700;
  letter-spacing: 0.15em;
  margin-bottom: 0.25rem;
  text-transform: uppercase;
}

.c28 {
  color: var(--color-highlight);
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 3.5rem;
  font-weight: 700;
  line-height: 1;
}

.c29 {
  color: var(--color-paragraph);
  font-size: 0.75rem;
  font-weight: 700;
  letter-spacing: 0.1em;
  text-transform: uppercase;
}

.c23 {
  color: var(--color-headline);
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 1.5rem;
  font-weight: 700;
  margin: 0 0 0.625rem;
}

.c24 {
  color: var(--color-paragraph);
  font-size: 1rem;
  line-height: 1.6;
  margin: 0 0 1.75rem;
  max-width: 420px;
}

.c25 {
  align-items: center;
  background: var(--color-button);
  border: 2px solid transparent;
  border-radius: 4px;
  color: #ffffff;
  cursor: pointer;
  display: inline-flex;
  font-family: var(--font-inter),sans-serif;
  font-size: 1rem;
  font-weight: 700;
  gap: 0.5rem;
  padding: 0.875rem 2rem;
  transition: all 0.2s ease;
}

.c25:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 3px;
}

.c30 {
  border: 1px solid rgba(128, 128, 128, 0.15);
  border-radius: 1rem;
  margin-bottom: 2rem;
  padding: 1.5rem 1.75rem;
}

.c32 {
  align-items: baseline;
  display: flex;
  justify-content: space-between;
  margin-bottom: 0.875rem;
}

.c33 {
  color: var(--color-headline);
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 1rem;
  font-weight: 700;
}

.c34 {
  color: var(--color-paragraph);
  font-size: 0.875rem;
}

.c35 {
  background: color-mix(in srgb, var(--color-highlight) 10%, transparent);
  border-radius: 999px;
  height: 8px;
  margin-bottom: 0.875rem;
  overflow: hidden;
}

.c36 {
  background: linear-gradient(       90deg,       var(--color-highlight),       color-mix(in srgb, var(--color-highlight) 80%, transparent)     );
  border-radius: 999px;
  height: 100%;
  transition: width 1.2s cubic-bezier(0.4, 0, 0.2, 1) 0.3s;
  width: 2%;
}

.c37 {
  align-items: center;
  display: flex;
  justify-content: space-between;
}

.c38 {
  color: var(--color-paragraph);
  font-size: 0.75rem;
  letter-spacing: 0.05em;
}

.c40 {
  display: flex;
  flex-direction: column;
  gap: 0.375rem;
}

.c41 {
  color: var(--color-paragraph);
  font-size: 0.75rem;
  font-weight: 700;
  letter-spacing: 0.12em;
  text-transform: uppercase;
}

.c42 {
  color: var(--color-headline);
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 1.25rem;
  font-weight: 700;
  line-height: 1;
}

.c43 {
  color: var(--color-paragraph);
  font-size: 0.875rem;
}

.c31 {
  display: grid;
  gap: 1.5rem;
}

.c39 {
  border-top: 1px solid rgba(128, 128, 128, 0.12);
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  padding-top: 1.5rem;
}

.c44 {
  border-top: 1px solid rgba(128, 128, 128, 0.12);
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  padding-top: 1.5rem;
}

.c44:first-child {
  border-top: none;
  padding-top: 0;
}

.c45 {
  color: var(--color-paragraph);
  font-size: 0.75rem;
  font-weight: 700;
  letter-spacing: 0.12em;
  text-transform: uppercase;
}

.c46 {
  color: var(--color-headline);
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 1.25rem;
  font-weight: 700;
  line-height: 1.2;
}

.c47 {
  color: var(--color-paragraph);
  font-size: 0.875rem;
}

.c48 {
  color: var(--color-headline);
  font-size: 0.875rem;
  font-weight: 600;
}

.c49 {
  display: inline-block;
  white-space: nowrap;
}

.c49 sub {
  font-size: 0.7em;
  line-height: 1;
}

.c53 {
  align-items: flex-end;
  display: flex;
  gap: 1rem;
  justify-content: space-between;
  margin-top: 0.25rem;
}

.c54 {
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c56 {
  align-items: center;
  color: var(--color-highlight);
  display: inline-flex;
  flex-shrink: 0;
  font-size: 0.875rem;
  font-weight: 600;
  gap: 0.25rem;
  text-decoration: none;
  transition: opacity 0.2s ease;
}

.c56:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 3px;
}

.c57 {
  align-items: center;
  border: 1px solid color-mix(in srgb, var(--color-highlight) 30%, transparent);
  border-radius: 999px;
  color: var(--color-paragraph);
  display: inline-flex;
  font-size: 0.875rem;
  gap: 0.5rem;
  padding: 0.4rem 0.875rem;
  text-decoration: none;
  transition: border-color 0.2s ease,background 0.2s ease;
  width: fit-content;
}

.c57:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 3px;
}

.c58 {
  color: var(--color-highlight);
  flex-shrink: 0;
}

.c59 {
  color: var(--color-highlight);
  flex-shrink: 0;
}

@media (min-width: 600px) {
  .c1 {
    column-gap: calc(24px);
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  }
}

@media (min-width: 900px) {
  .c1 {
    column-gap: calc(36px);
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
  }
}

@media (min-width: 1200px) {
  .c1 {
    column-gap: calc(81px);
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
  }
}

@media (min-width: 1536px) {
  .c1 {
    column-gap: calc(121.5px);
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (hover: hover) {
  .c52:hover {
    opacity: 1;
  }
}

@media (max-width: 1199.99px) {
  .c0 {
    padding-bottom: 2rem;
    padding-top: 2rem;
  }
}

@media (max-width: 899.99px) {
  .c0 {
    padding-bottom: 1.5rem;
    padding-top: 1.5rem;
  }
}

@media (min-width: 1200px) {
  .c7 {
    font-size: 2.5rem;
  }
}

@media (min-width: 900px) {
  .c16 {
    gap: 1.5rem;
    margin-bottom: 2.5rem;
  }
}

@media (min-width: 900px) {
  .c17 {
    border: none;
    border-radius: 0;
    gap: 0.375rem;
    padding: 0;
  }
}

@media (min-width: 900px) {
  .c18 {
    font-size: 3.25rem;
  }
}

@media (max-width: 599.99px) {
  .c21 {
    gap: 1.5rem;
    margin-bottom: 1.5rem;
    padding: 1rem;
  }
}

@media (min-width: 900px) {
  .c21 {
    align-items: center;
    flex-direction: row;
    justify-content: space-between;
    padding: 2.5rem 3rem;
  }
}

@media (min-width: 900px) {
  .c26 {
    align-items: flex-end;
    border-left: 1px solid color-mix(in srgb, var(--color-highlight) 15%, transparent);
    border-top: none;
    flex-shrink: 0;
    padding-left: 3rem;
    padding-top: 0;
    text-align: right;
    width: 260px;
  }
}

@media (min-width: 1200px) {
  .c28 {
    font-size: 4.5rem;
  }
}

@media (min-width: 1200px) {
  .c23 {
    font-size: 2rem;
  }
}

@media (hover: hover) {
  .c25:hover {
    background: transparent;
    border-color: var(--color-highlight);
    color: var(--color-highlight);
  }
}

@media (max-width: 599.99px) {
  .c30 {
    margin-bottom: 1.5rem;
    padding: 1rem;
  }
}

@media (min-width: 900px) {
  .c31 {
    gap: 2rem;
    grid-template-columns: 1fr 1fr;
  }
}

@media (min-width: 900px) {
  .c39 {
    border-left: 1px solid rgba(128, 128, 128, 0.12);
    border-top: none;
    padding-left: 2rem;
    padding-top: 0;
  }
}

@media (max-width: 599.99px) {
  .c48 {
    align-items: flex-start;
    display: flex;
    flex-direction: column;
    gap: 0.25rem;
  }
}

@media (max-width: 599.99px) {
  .c50 {
    display: none;
  }
}

@media (hover: hover) {
  .c56:hover {
    opacity: 0.75;
  }
}

@media (hover: hover) {
  .c57:hover {
    background: color-mix(in srgb, var(--color-highlight) 6%, transparent);
    border-color: color-mix(in srgb, var(--color-highlight) 60%, transparent);
  }
}

@keyframes k0 {
  0%, 100% {
    opacity: 1;
    transform: scale(1);
  }

  50% {
    opacity: 0.4;
    transform: scale(0.75);
  }
}

<div>
  <section
    class="c0"
    id="forest"
  >
    <section
      class="c1"
    >
      <div
        class="c2"
      >
        <span
          aria-hidden="true"
          class="c3"
        />
        <span
          class="c4"
        >
          Growing in public
        </span>
      </div>
      <p
        class="c5 c6"
      >
        Forest
      </p>
      <h2
        class="c7"
      >
        This portfolio grows through feedback, research and iteration.
      </h2>
      <p
        class="c8 c9"
      >
        Forest didn't start with this website — it began months earlier, as a personal commitment to give something back. Today it grows in three ways: community feedback, focused research, and my own iteration on the portfolio.
      </p>
      <div
        class="c10"
      >
        <div
          class="c11"
        >
          <span
            class="c12"
          >
            May 2026
          </span>
          <span
            class="c13"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-leaf"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2.625"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 20A7 7 0 0 1 9.8 6.1C15.5 5 17 4.48 19 2c1 2 2 4.18 2 8 0 5.5-4.78 10-10 10Z"
              />
              <path
                d="M2 21c0-3 1.85-5.36 5.08-6C9.5 14.52 12 13 13 12"
              />
            </svg>
          </span>
          <span
            class="c14"
          >
            Started planting trees every month — a personal commitment, before any portfolio.
          </span>
        </div>
        <div
          class="c11"
        >
          <span
            class="c12"
          >
            July 2026
          </span>
          <span
            class="c13"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-tree-deciduous"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2.625"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 19a4 4 0 0 1-2.24-7.32A3.5 3.5 0 0 1 9 6.03V6a3 3 0 1 1 6 0v.04a3.5 3.5 0 0 1 3.24 5.65A4 4 0 0 1 16 19Z"
              />
              <path
                d="M12 19v3"
              />
            </svg>
          </span>
          <span
            class="c14"
          >
            Forest was born. The portfolio invites others to become part of that journey.
          </span>
        </div>
        <div
          class="c11"
        >
          <span
            class="c12"
          >
            Today
          </span>
          <span
            class="c13"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-arrow-right"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2.625"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
              <path
                d="m12 5 7 7-7 7"
              />
            </svg>
          </span>
          <span
            class="c14"
          >
            Every meaningful contribution can shape the portfolio — community feedback grows a pair of real trees.
          </span>
        </div>
      </div>
      <div
        class="c15"
        id="forest-impact"
      />
      <div
        class="c16"
      >
        <div
          class="c17"
          data-testid="stat-item"
        >
          <span
            class="c18"
          >
            10
          </span>
          <p
            class="c19 c20"
          >
            insights collected
          </p>
        </div>
        <div
          class="c17"
          data-testid="stat-item"
        >
          <span
            class="c18"
          >
            4
          </span>
          <p
            class="c19 c20"
          >
            trees dedicated
          </p>
        </div>
        <div
          class="c17"
          data-testid="stat-item"
        >
          <span
            class="c18"
          >
            8
          </span>
          <p
            class="c19 c20"
          >
            improvements shipped
          </p>
        </div>
      </div>
      <div
        class="c21"
      >
        <div
          class="c22"
        >
          <h3
            class="c23"
          >
            Help this portfolio grow.
          </h3>
          <p
            class="c24"
          >
            Every meaningful contribution can shape the portfolio. Community feedback grows a pair of real trees — one dedicated to you, one matched by me.
          </p>
          <button
            aria-haspopup="dialog"
            class="c25"
            data-testid="plant-feedback"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-leaf"
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2.4705882352941178"
              viewBox="0 0 24 24"
              width="17"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 20A7 7 0 0 1 9.8 6.1C15.5 5 17 4.48 19 2c1 2 2 4.18 2 8 0 5.5-4.78 10-10 10Z"
              />
              <path
                d="M2 21c0-3 1.85-5.36 5.08-6C9.5 14.52 12 13 13 12"
              />
            </svg>
            Plant your feedback
          </button>
        </div>
        <div
          class="c26"
        >
          <span
            class="c27"
          >
            My Forest
          </span>
          <span
            class="c28"
          >
            34
          </span>
          <span
            class="c29"
          >
            Trees planted since May 2026
          </span>
        </div>
      </div>
      <div
        class="c30"
      >
        <div
          class="c31"
        >
          <div>
            <div
              class="c32"
            >
              <span
                class="c33"
              >
                Forest progress
              </span>
              <span
                class="c34"
              >
                34
                 / 
                50
                 
                trees
              </span>
            </div>
            <div
              class="c35"
            >
              <div
                class="c36"
              />
            </div>
            <div
              class="c37"
            >
              <span
                class="c38"
              >
                68% towards next milestone
              </span>
            </div>
          </div>
          <div
            class="c39"
          >
            <div
              class="c40"
              data-testid="community-impact"
            >
              <span
                class="c41"
              >
                Community impact
              </span>
              <span
                class="c42"
              >
                4 trees grown through portfolio feedback
              </span>
              <span
                class="c43"
              >
                2 meaningful contributions
                 · 
                2 trees planted for each
              </span>
            </div>
            <div
              class="c44"
              data-testid="season-project"
            >
              <span
                class="c45"
              >
                Season One project
              </span>
              <span
                class="c46"
              >
                Community Reforestation in Indonesia
              </span>
              <span
                class="c47"
              >
                Indonesia · Tropical community reforestation
              </span>
              <span
                class="c48"
                data-testid="project-stats"
              >
                <span>
                  4 trees · 2 species
                </span>
                <span
                  class="c49"
                >
                  <span
                    class="c50"
                  >
                     · 
                  </span>
                  1.5 t CO
                  <sub>
                    2
                  </sub>
                   lifetime estimate
                  <span
                    class="c51"
                  >
                    <button
                      aria-expanded="false"
                      aria-label="About the CO₂ estimate"
                      class="c52"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-info"
                        fill="none"
                        height="17"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="1.75"
                        viewBox="0 0 24 24"
                        width="17"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          r="10"
                        />
                        <path
                          d="M12 16v-4"
                        />
                        <path
                          d="M12 8h.01"
                        />
                      </svg>
                    </button>
                  </span>
                </span>
              </span>
              <div
                class="c53"
              >
                <ul
                  class="c54"
                >
                  <li
                    class="c55"
                  >
                    Sengon
                  </li>
                  <li
                    class="c55"
                  >
                    Kadamba
                  </li>
                </ul>
                <a
                  class="c56"
                  href="https://tree-nation.com/projects/community-reforestation-in-indonesia"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  View project
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-arrow-up-right"
                    fill="none"
                    height="11"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="11"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7 7h10v10"
                    />
                    <path
                      d="M7 17 17 7"
                    />
                  </svg>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
      <a
        class="c57"
        href="https://tree-nation.com/profile/andrea-agostini-103769"
        rel="noopener noreferrer"
        target="_blank"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-tree-deciduous c58"
          fill="none"
          height="15"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.8"
          viewBox="0 0 24 24"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 19a4 4 0 0 1-2.24-7.32A3.5 3.5 0 0 1 9 6.03V6a3 3 0 1 1 6 0v.04a3.5 3.5 0 0 1 3.24 5.65A4 4 0 0 1 16 19Z"
          />
          <path
            d="M12 19v3"
          />
        </svg>
        View the forest on Tree-Nation
        <svg
          aria-hidden="true"
          class="lucide lucide-arrow-up-right c59"
          fill="none"
          height="13"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="13"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7h10v10"
          />
          <path
            d="M7 17 17 7"
          />
        </svg>
      </a>
    </section>
  </section>
</div>
`;

exports[`Forest renders correctly with minimal props 1`] = `
.c1 {
  display: grid;
  min-height: auto;
  position: relative;
  width: 100%;
  column-gap: 16px;
  grid-template-columns: 1fr min(1440px, 100% - 32px) 1fr;
}

.c1 >* {
  grid-column: 2/auto;
}

.c5 {
  color: var(--color-paragraph);
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c8 {
  color: var(--color-paragraph);
  font-size: 1.25rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c6 {
  color: var(--color-highlight);
  font-size: 0.75rem;
  font-weight: 600;
  letter-spacing: 0.2em;
  margin: 0 0 1.25rem;
  text-transform: uppercase;
}

.c0 {
  padding-bottom: 3rem;
  padding-top: 3rem;
}

.c2 {
  align-items: center;
  border: 1px solid rgba(128, 128, 128, 0.2);
  border-radius: 999px;
  display: inline-flex;
  gap: 0.5rem;
  margin-bottom: 1.25rem;
  padding: 0.3rem 0.75rem 0.3rem 0.625rem;
  width: fit-content;
}

.c3 {
  animation: k0 2.4s ease-in-out infinite;
  background: var(--color-highlight);
  border-radius: 100%;
  flex-shrink: 0;
  height: 6px;
  width: 6px;
}

.c4 {
  color: var(--color-paragraph);
  font-size: 0.75rem;
  font-weight: 700;
  letter-spacing: 0.12em;
  text-transform: uppercase;
}

.c15 {
  scroll-margin-top: 6rem;
}

.c7 {
  color: var(--color-headline);
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 2rem;
  font-weight: 700;
  line-height: 1;
  margin: 0 0 1rem;
  max-width: 640px;
}

.c9 {
  line-height: 1.6;
  margin-bottom: 2.5rem;
  max-width: 580px;
}

.c10 {
  display: flex;
  flex-direction: column;
  gap: 0.875rem;
  margin-bottom: 2.5rem;
}

.c11 {
  align-items: flex-start;
  display: flex;
  gap: 1rem;
}

.c12 {
  color: var(--color-paragraph);
  flex-shrink: 0;
  font-size: 0.75rem;
  letter-spacing: 0.08em;
  text-transform: uppercase;
  white-space: nowrap;
  width: 110px;
}

.c13 {
  align-items: center;
  color: var(--color-highlight);
  display: flex;
  flex: 0 0 16px;
  font-size: 0.875rem;
  height: 1.2em;
  justify-content: center;
}

.c14 {
  color: var(--color-headline);
  font-size: 0.875rem;
  line-height: 1.2;
}

.c16 {
  background: color-mix(in srgb, var(--color-highlight) 5%, transparent);
  border: 2px solid var(--color-highlight);
  border-radius: 1rem;
  display: flex;
  flex-direction: column;
  gap: 2rem;
  margin-bottom: 2.5rem;
  padding: 2rem;
}

.c17 {
  flex: 1;
}

.c21 {
  align-items: flex-start;
  border-top: 1px solid color-mix(in srgb, var(--color-highlight) 15%, transparent);
  display: flex;
  flex-direction: column;
  gap: 0.25rem;
  padding-top: 1.25rem;
}

.c22 {
  color: var(--color-paragraph);
  font-size: 0.75rem;
  font-weight: 700;
  letter-spacing: 0.15em;
  margin-bottom: 0.25rem;
  text-transform: uppercase;
}

.c23 {
  color: var(--color-highlight);
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 3.5rem;
  font-weight: 700;
  line-height: 1;
}

.c24 {
  color: var(--color-paragraph);
  font-size: 0.75rem;
  font-weight: 700;
  letter-spacing: 0.1em;
  text-transform: uppercase;
}

.c18 {
  color: var(--color-headline);
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 1.5rem;
  font-weight: 700;
  margin: 0 0 0.625rem;
}

.c19 {
  color: var(--color-paragraph);
  font-size: 1rem;
  line-height: 1.6;
  margin: 0 0 1.75rem;
  max-width: 420px;
}

.c20 {
  align-items: center;
  background: var(--color-button);
  border: 2px solid transparent;
  border-radius: 4px;
  color: #ffffff;
  cursor: pointer;
  display: inline-flex;
  font-family: var(--font-inter),sans-serif;
  font-size: 1rem;
  font-weight: 700;
  gap: 0.5rem;
  padding: 0.875rem 2rem;
  transition: all 0.2s ease;
}

.c20:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 3px;
}

.c25 {
  border: 1px solid rgba(128, 128, 128, 0.15);
  border-radius: 1rem;
  margin-bottom: 2rem;
  padding: 1.5rem 1.75rem;
}

.c27 {
  align-items: baseline;
  display: flex;
  justify-content: space-between;
  margin-bottom: 0.875rem;
}

.c28 {
  color: var(--color-headline);
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 1rem;
  font-weight: 700;
}

.c29 {
  color: var(--color-paragraph);
  font-size: 0.875rem;
}

.c30 {
  background: color-mix(in srgb, var(--color-highlight) 10%, transparent);
  border-radius: 999px;
  height: 8px;
  margin-bottom: 0.875rem;
  overflow: hidden;
}

.c31 {
  background: linear-gradient(       90deg,       var(--color-highlight),       color-mix(in srgb, var(--color-highlight) 80%, transparent)     );
  border-radius: 999px;
  height: 100%;
  transition: width 1.2s cubic-bezier(0.4, 0, 0.2, 1) 0.3s;
  width: 2%;
}

.c32 {
  align-items: center;
  display: flex;
  justify-content: space-between;
}

.c33 {
  color: var(--color-paragraph);
  font-size: 0.75rem;
  letter-spacing: 0.05em;
}

.c26 {
  display: grid;
  gap: 1.5rem;
}

.c34 {
  align-items: center;
  border: 1px solid color-mix(in srgb, var(--color-highlight) 30%, transparent);
  border-radius: 999px;
  color: var(--color-paragraph);
  display: inline-flex;
  font-size: 0.875rem;
  gap: 0.5rem;
  padding: 0.4rem 0.875rem;
  text-decoration: none;
  transition: border-color 0.2s ease,background 0.2s ease;
  width: fit-content;
}

.c34:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 3px;
}

.c35 {
  color: var(--color-highlight);
  flex-shrink: 0;
}

.c36 {
  color: var(--color-highlight);
  flex-shrink: 0;
}

@media (min-width: 600px) {
  .c1 {
    column-gap: calc(24px);
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  }
}

@media (min-width: 900px) {
  .c1 {
    column-gap: calc(36px);
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
  }
}

@media (min-width: 1200px) {
  .c1 {
    column-gap: calc(81px);
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
  }
}

@media (min-width: 1536px) {
  .c1 {
    column-gap: calc(121.5px);
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (max-width: 1199.99px) {
  .c0 {
    padding-bottom: 2rem;
    padding-top: 2rem;
  }
}

@media (max-width: 899.99px) {
  .c0 {
    padding-bottom: 1.5rem;
    padding-top: 1.5rem;
  }
}

@media (min-width: 1200px) {
  .c7 {
    font-size: 2.5rem;
  }
}

@media (max-width: 599.99px) {
  .c16 {
    gap: 1.5rem;
    margin-bottom: 1.5rem;
    padding: 1rem;
  }
}

@media (min-width: 900px) {
  .c16 {
    align-items: center;
    flex-direction: row;
    justify-content: space-between;
    padding: 2.5rem 3rem;
  }
}

@media (min-width: 900px) {
  .c21 {
    align-items: flex-end;
    border-left: 1px solid color-mix(in srgb, var(--color-highlight) 15%, transparent);
    border-top: none;
    flex-shrink: 0;
    padding-left: 3rem;
    padding-top: 0;
    text-align: right;
    width: 260px;
  }
}

@media (min-width: 1200px) {
  .c23 {
    font-size: 4.5rem;
  }
}

@media (min-width: 1200px) {
  .c18 {
    font-size: 2rem;
  }
}

@media (hover: hover) {
  .c20:hover {
    background: transparent;
    border-color: var(--color-highlight);
    color: var(--color-highlight);
  }
}

@media (max-width: 599.99px) {
  .c25 {
    margin-bottom: 1.5rem;
    padding: 1rem;
  }
}

@media (min-width: 900px) {
  .c26 {
    gap: 2rem;
    grid-template-columns: 1fr 1fr;
  }
}

@media (hover: hover) {
  .c34:hover {
    background: color-mix(in srgb, var(--color-highlight) 6%, transparent);
    border-color: color-mix(in srgb, var(--color-highlight) 60%, transparent);
  }
}

@keyframes k0 {
  0%, 100% {
    opacity: 1;
    transform: scale(1);
  }

  50% {
    opacity: 0.4;
    transform: scale(0.75);
  }
}

<div>
  <section
    class="c0"
    id="forest"
  >
    <section
      class="c1"
    >
      <div
        class="c2"
      >
        <span
          aria-hidden="true"
          class="c3"
        />
        <span
          class="c4"
        >
          Growing in public
        </span>
      </div>
      <p
        class="c5 c6"
      >
        Forest
      </p>
      <h2
        class="c7"
      >
        This portfolio grows through feedback, research and iteration.
      </h2>
      <p
        class="c8 c9"
      >
        Forest didn't start with this website — it began months earlier, as a personal commitment to give something back. Today it grows in three ways: community feedback, focused research, and my own iteration on the portfolio.
      </p>
      <div
        class="c10"
      >
        <div
          class="c11"
        >
          <span
            class="c12"
          >
            May 2026
          </span>
          <span
            class="c13"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-leaf"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2.625"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 20A7 7 0 0 1 9.8 6.1C15.5 5 17 4.48 19 2c1 2 2 4.18 2 8 0 5.5-4.78 10-10 10Z"
              />
              <path
                d="M2 21c0-3 1.85-5.36 5.08-6C9.5 14.52 12 13 13 12"
              />
            </svg>
          </span>
          <span
            class="c14"
          >
            Started planting trees every month — a personal commitment, before any portfolio.
          </span>
        </div>
        <div
          class="c11"
        >
          <span
            class="c12"
          >
            July 2026
          </span>
          <span
            class="c13"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-tree-deciduous"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2.625"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 19a4 4 0 0 1-2.24-7.32A3.5 3.5 0 0 1 9 6.03V6a3 3 0 1 1 6 0v.04a3.5 3.5 0 0 1 3.24 5.65A4 4 0 0 1 16 19Z"
              />
              <path
                d="M12 19v3"
              />
            </svg>
          </span>
          <span
            class="c14"
          >
            Forest was born. The portfolio invites others to become part of that journey.
          </span>
        </div>
        <div
          class="c11"
        >
          <span
            class="c12"
          >
            Today
          </span>
          <span
            class="c13"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-arrow-right"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2.625"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
              <path
                d="m12 5 7 7-7 7"
              />
            </svg>
          </span>
          <span
            class="c14"
          >
            Every meaningful suggestion grows a pair of trees — one for you, one matched by me.
          </span>
        </div>
      </div>
      <div
        class="c15"
        id="forest-impact"
      />
      <div
        class="c16"
      >
        <div
          class="c17"
        >
          <h3
            class="c18"
          >
            Help this portfolio grow.
          </h3>
          <p
            class="c19"
          >
            Every meaningful contribution can shape the portfolio. Community feedback grows a pair of real trees — one dedicated to you, one matched by me.
          </p>
          <button
            aria-haspopup="dialog"
            class="c20"
            data-testid="plant-feedback"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-leaf"
              fill="none"
              height="17"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2.4705882352941178"
              viewBox="0 0 24 24"
              width="17"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 20A7 7 0 0 1 9.8 6.1C15.5 5 17 4.48 19 2c1 2 2 4.18 2 8 0 5.5-4.78 10-10 10Z"
              />
              <path
                d="M2 21c0-3 1.85-5.36 5.08-6C9.5 14.52 12 13 13 12"
              />
            </svg>
            Plant your feedback
          </button>
        </div>
        <div
          class="c21"
        >
          <span
            class="c22"
          >
            My Forest
          </span>
          <span
            class="c23"
          >
            34
          </span>
          <span
            class="c24"
          >
            Trees planted since May 2026
          </span>
        </div>
      </div>
      <div
        class="c25"
      >
        <div
          class="c26"
        >
          <div>
            <div
              class="c27"
            >
              <span
                class="c28"
              >
                Forest progress
              </span>
              <span
                class="c29"
              >
                34
                 / 
                50
                 
                trees
              </span>
            </div>
            <div
              class="c30"
            >
              <div
                class="c31"
              />
            </div>
            <div
              class="c32"
            >
              <span
                class="c33"
              >
                68% towards next milestone
              </span>
            </div>
          </div>
        </div>
      </div>
      <a
        class="c34"
        href="https://tree-nation.com/profile/andrea-agostini-103769"
        rel="noopener noreferrer"
        target="_blank"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-tree-deciduous c35"
          fill="none"
          height="15"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.8"
          viewBox="0 0 24 24"
          width="15"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 19a4 4 0 0 1-2.24-7.32A3.5 3.5 0 0 1 9 6.03V6a3 3 0 1 1 6 0v.04a3.5 3.5 0 0 1 3.24 5.65A4 4 0 0 1 16 19Z"
          />
          <path
            d="M12 19v3"
          />
        </svg>
        View the forest on Tree-Nation
        <svg
          aria-hidden="true"
          class="lucide lucide-arrow-up-right c36"
          fill="none"
          height="13"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="13"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7h10v10"
          />
          <path
            d="M7 17 17 7"
          />
        </svg>
      </a>
    </section>
  </section>
</div>
`;
